<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashbg"
    tools:context=".dashboard">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:id="@+id/hello"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_name_is_sparky"
            android:fontFamily="@font/acme"
            android:textColor="@color/white"
            android:layout_below="@+id/hello"
            android:id="@+id/sparkyintro"
            android:textSize="26sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_am_here_to_help_you"
            android:fontFamily="@font/acme"
            android:layout_below="@+id/sparkyintro"
            android:textColor="@color/white"
            android:textSize="26sp"/>
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentRight="true"
            android:src="@drawable/sparky"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/AskSparky"
            android:layout_width="750dp"
            android:layout_height="250dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/akssparky"
            android:contentDescription="@string/asksparky" />
        <ImageView
            android:id="@+id/imagegen"
            android:layout_width="750dp"
            android:layout_height="250dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/imagegen"
            android:contentDescription="@string/imagegen" />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/acme"
            android:text="@string/categories"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/dsa"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/subjects"
            android:contentDescription="@string/dsa" />
        <ImageView
            android:id="@+id/development"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="120dp"
            android:src="@drawable/development"
            android:contentDescription="@string/development" />
        <ImageView
            android:id="@+id/subjects"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_height="120dp"
            android:src="@drawable/dsa"
            android:contentDescription="@string/coresubjects" />


    </LinearLayout>


   </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


