<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
android:background="@color/white"
    android:gravity="center"
    android:padding="12dp"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:src="@drawable/logo"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="15dp"
        android:hint="@string/username"
        android:textColorHint="@color/grey"

        android:textSize="25sp"
        android:fontFamily="@font/acme"
        android:padding="10dp"
        android:id="@+id/username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/acme"
        android:textColorHint="@color/grey"
        android:hint="@string/name"
        android:textSize="25sp"
        android:padding="10dp"
        android:id="@+id/storyuser"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/acme"
        android:textColorHint="@color/grey"

        android:textSize="25sp"
        android:hint="@string/email"
        android:padding="10dp"
        android:id="@+id/email"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:textColorHint="@color/grey"

        android:hint="@string/password"
        android:fontFamily="@font/acme"
        android:padding="10dp"
        android:id="@+id/password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="15sp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/acme"

        android:padding="10dp"
        android:id="@+id/register"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_a_user_login"
        android:textColor="@color/black"
        android:layout_marginTop="15dp"
        android:id="@+id/login_user"/>

</LinearLayout>