<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:padding="12dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:src="@drawable/logo"
        android:contentDescription="TODO" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:textSize="25sp"
        android:layout_marginTop="0dp"
        android:fontFamily="@font/acme"
        android:hint="@string/email"
        android:textColorHint="@color/grey"
        android:padding="10dp"
        android:id="@+id/email"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:textSize="25sp"
        android:fontFamily="@font/acme"
        android:textColorHint="@color/grey"
        android:padding="10dp"
        android:id="@+id/password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:layout_marginTop="15sp"
        android:text="@string/login"
        android:textSize="18sp"

        android:fontFamily="@font/acme"
        android:textColor="@color/white"
        android:padding="10dp"
        android:id="@+id/login"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/new_to_instagram_register"
        android:layout_marginTop="15dp"
        android:id="@+id/register_user"/>

</LinearLayout>