<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dsa_background"
    tools:context=".programming">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:layout_marginLeft="20dp"
        android:textSize="22sp"
        android:fontFamily="@font/acme"
        android:textColor="@color/purple_200"
        android:text="@string/programming_languages"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cpp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="33dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/cppnew" />

        <ImageView
            android:id="@+id/java"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/java" />

        <ImageView
            android:id="@+id/python"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/python" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="7dp"
            android:textSize="22sp"
            android:fontFamily="@font/acme"
            android:textColor="@color/purple_200"
            android:text="@string/data_structures_an_algorithms"/>

        <ImageView
            android:id="@+id/DSAarticles"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/dsaarticles"
            android:contentDescription="@string/dsaArticles" />

        <ImageView
            android:id="@+id/DSAvideos"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:src="@drawable/dsavideos"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/dsaVideos" />


    </LinearLayout>

</LinearLayout>